--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -2,18 +2,7 @@ Final video
 \url{https://www.youtube.com/watch?v=UsDRPjDwr8A}
 screenshots
 
-%=========================================================================================================
 
-\subsection{Case Study - St Salvator's Chapel}
-Founded in 1450 but internally stripped of its medieval fittings during the Protestant Reformation (1517 - 1648), St Salvator's chapel in St Andrews looks markedly different in the present day than it did upon its completion. An existing VR reconstruction of the chapel as it stood in the period 1450-1460 \& the marked differences between the internal appearance of the VR building \& the current building (including the replacement of the original stone roof with a wooden one \& drastically different dividing of the internal space) make this chapel an ideal candidate within the context of cultural heritage for a mobile XR system to be applied. Figure \ref{sallies_layout} shows the 1450-1460 layout of the chapel (including the paths that the IPS has been prepared upon).
-
-\begin{figure}[h]
-	\begin{center}
-		\includegraphics[width=0.7\textwidth]{sallies_layout.png}
-		\caption{Floor plan of St Salvator's chapel, with IPS routes.}
-		\label{sallies_layout}
-	\end{center}
-\end{figure}
 
 %=========================================================================================================
 
@@ -316,19 +305,21 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 
 %=========================================================================================================
 
+%\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/11_1-4_3up.png}}
+
 \clearpage
 
 \subsection{Participant 1}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/1_4up.png}}
+	\includegraphics[width=\textwidth]{1/1_4up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/1_2up.png}}
+	\includegraphics[width=\textwidth]{1/1_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -339,14 +330,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 3}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/3_4up.png}}
+	\includegraphics[width=\textwidth]{1/3_4up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/3_2up.png}}
+	\includegraphics[width=\textwidth]{1/3_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -357,14 +348,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 4}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/4_4up.png}}
+	\includegraphics[width=\textwidth]{1/4_4up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/4_2up.png}}
+	\includegraphics[width=\textwidth]{1/4_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -375,14 +366,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/5_4up.png}}
+	\includegraphics[width=\textwidth]{1/5_4up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/5_2up.png}}
+	\includegraphics[width=\textwidth]{1/5_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -393,14 +384,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/6_4up.png}}
+	\includegraphics[width=\textwidth]{1/6_4up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{1/6_2up.png}}
+	\includegraphics[width=\textwidth]{1/6_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -410,11 +401,6 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 
 \section{Phase 2.1 Results}
 
-\lipsum[1]
-
-\lipsum[2]
-
-\lipsum[3]
 
 %=========================================================================================================
 
@@ -423,7 +409,7 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 7}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/7_1-4_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/7_1-4_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -434,14 +420,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 8}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/8_1-3_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/8_1-3_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/8_1-4_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/8_1-4_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -452,14 +438,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 9}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/9_1-3_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/9_1-3_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/9_1-4_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/9_1-4_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -470,14 +456,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 10}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/10_1-3_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/10_1-3_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/10_1-4_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/10_1-4_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -488,14 +474,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 11}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/11_1-3_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/11_1-3_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/11_1-4_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/11_1-4_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -506,14 +492,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 12}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/12_1-3_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/12_1-3_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/12_1-4_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/12_1-4_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -524,14 +510,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 13}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/13_1-3_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/13_1-3_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.1/13_1-4_3up.png}}
+	\includegraphics[width=\textwidth]{2.1/13_1-4_3up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -548,14 +534,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 14}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/14_75_2up.png}}
+	\includegraphics[width=1.2\textwidth]{2.2/14_75_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/14_50_2up.png}}
+	\includegraphics[width=1.2\textwidth]{2.2/14_50_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -566,14 +552,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 15}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/15_75_2up.png}}
+	\includegraphics[width=1.2\textwidth]{2.2/15_75_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/15_50_2up.png}}
+	\includegraphics[width=1.2\textwidth]{2.2/15_50_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -584,14 +570,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 16}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/16_75_2up.png}}
+	\includegraphics[width=1.2\textwidth]{2.2/16_75_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/16_50_2up.png}}
+	\includegraphics[width=1.2\textwidth]{2.2/16_50_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
@@ -602,14 +588,14 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 17}
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/17_75_2up.png}}
+	\includegraphics[width=\textwidth]{2.2/17_75_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\makebox[\textwidth][c]{\includegraphics[width=1.2\textwidth]{2.2/17_50_2up.png}}
+	\includegraphics[width=\textwidth]{2.2/17_50_2up.png}
 	\caption{Some images, yah.}
 \end{figure}
 
