--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,9 @@
 \documentclass{report}
 
-\usepackage{fullpage}
+%university regulations(?)
+\usepackage[margin=3cm]{geometry}
+
+%\usepackage{fullpage}
 \usepackage{graphicx}
 \usepackage{appendix}
 
