--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -1,6 +1,23 @@
+The design \& development of the Mirrorshades platform was driven both to investigate the promise of mobile PR systems in general \& to assess their suitability when applied to a particular case study, as a new modality for interacting with virtual content within the context of cultural heritage sites. For this purpose, evaluation of the platform addresses both its reception compared to `traditional' virtual heritage experiences \& reception to different PR implementations in terms of the default view \& transition styles provided.
+
+%=========================================================================================================
+
 Final video
 \url{https://www.youtube.com/watch?v=UsDRPjDwr8A}
 screenshots
+
+%=========================================================================================================
+
+\section{Overview of Investigations}
+
+Participants were sourced by adverts disseminated via an internal university memo system, which sends an email to all registered staff \& students each week. The advert appeared for several consecutive weeks. Participants were invited to take part in a \textit{`virtual reality study'}, \textit{`investigating different ways of switching your view between your real surroundings \& a virtual environment'}. Participation was incentivised by a prize draw to win Amazon vouchers. This approach was taken instead of sourcing participants from within the OVW group \& (computer science) department, as participants with a heightened knowledge \&/or interest in the technology underlying the platform were expected to skew results by paying conscious attention to the system itself rather than the experience of \textit{using} the system.
+
+In total 17 participants, with a mean age of 23.1 years \& a standard deviation of 4.9 years, took part in user studies, each lasting 20-30 minutes.
+
+
+
+
+
 
 
 
@@ -312,15 +329,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 1}
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{1/1_4up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{1/1_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -330,15 +351,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 3}
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{1/3_4up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{1/3_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -348,15 +373,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 4}
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{1/4_4up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{1/4_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -366,15 +395,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{1/5_4up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{1/5_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -384,15 +417,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{1/6_4up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{1/6_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -409,8 +446,10 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 7}
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/7_1-4_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -420,15 +459,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 8}
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/8_1-3_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/8_1-4_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -438,15 +481,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 9}
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/9_1-3_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/9_1-4_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -456,15 +503,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 10}
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/10_1-3_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/10_1-4_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -474,15 +525,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 11}
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/11_1-3_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/11_1-4_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -492,15 +547,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 12}
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/12_1-3_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/12_1-4_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -510,15 +569,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 13}
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/13_1-3_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.1/13_1-4_3up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -534,15 +597,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 14}
 
 \begin{figure}[h]
-	\includegraphics[width=1.2\textwidth]{2.2/14_75_2up.png}
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.2/14_75_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\includegraphics[width=1.2\textwidth]{2.2/14_50_2up.png}
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.2/14_50_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -552,15 +619,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 15}
 
 \begin{figure}[h]
-	\includegraphics[width=1.2\textwidth]{2.2/15_75_2up.png}
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.2/15_75_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\includegraphics[width=1.2\textwidth]{2.2/15_50_2up.png}
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.2/15_50_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -570,15 +641,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 16}
 
 \begin{figure}[h]
-	\includegraphics[width=1.2\textwidth]{2.2/16_75_2up.png}
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.2/16_75_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
-	\includegraphics[width=1.2\textwidth]{2.2/16_50_2up.png}
+	\begin{center}
+	\includegraphics[width=\textwidth]{2.2/16_50_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
@@ -588,15 +663,19 @@ It is worth highlighting the responses to q10 in relation to those to q2. Partic
 \subsection{Participant 17}
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.2/17_75_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 \clearpage
 
 \begin{figure}[h]
+	\begin{center}
 	\includegraphics[width=\textwidth]{2.2/17_50_2up.png}
 	\caption{Some images, yah.}
+	\end{center}
 \end{figure}
 
 %=========================================================================================================
